--- a/src/app/custom.css
+++ b/src/app/custom.css
@@ -82,7 +82,7 @@
 
 .hero-section{
     background-size: cover;
-    background-image: linear-gradient(to bottom, rgba(3,6,23,255), rgba(17,23,42, 0.75)), url(https://cdn.discordapp.com/attachments/1161182441491419176/1194345997405524008/pexels-tyler-lastovich-772803.jpg?ex=65b00463&is=659d8f63&hm=46e08c296876f7f7c7f4e0ac48bdf80d155f6fc9cecb4203d185f8baaa68baf2&);
+    background-image: linear-gradient(to bottom, rgba(3,6,23,255), rgba(17,23,42, 0.75)), url(https://i.ibb.co/PDjhDBW/pexels-tyler-lastovich-772803.jpg);
     background-position-y: -30px;
 }
 
